terraform/route.tf
resource "aws_route" "internet_access_route" {  
  route_table_id         = aws_route_table.internet_route_table.id  
  destination_cidr_block = "0.0.0.0/0"  
  gateway_id             = aws_internet_gateway.internet_gateway.id  
}  
resource "aws_route" "nat_gateway_route" {  
  route_table_id         = aws_route_table.private_route_table.id  
  destination_cidr_block = "0.0.0.0/0"  
  gateway_id             = aws_nat_gateway.nat_gateway.id  
}
